--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,7 @@ Thumbs.db
 # config file
 config.py
 # Custom folder to ignore file in
-/ignore_files/*
-/readme_images/*
-/models/*
-/shapes/*
+/ignore_files
+/readme_images
+/models
+/shapes
